Fix emoji alignment in reactions menu

--- a/resources/css/global/_emoji.css
+++ b/resources/css/global/_emoji.css
@@ -15,4 +15,5 @@ img.emoji {
 .icon .emoji {
   width: 100%;
   height: 100%;
+  vertical-align: 0;
 }
